# Standalone Necropolis directory server — the horde's muster point.
# Its own repo/concern; depends on the shared revenant-net protocol crate
# (artifact / identity / ledger / client) from the revenant repo via git.
[package]
name = "revenant-necropolis"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The Necropolis directory server for the revenant horde (discovery + hash-linked ledger + signed-artifact catalog)."

# Own single-crate workspace so it never tries to join a parent workspace.
[workspace]

[[bin]]
name = "necropolis"
path = "src/main.rs"

[dependencies]
# Shared protocol/client, from the revenant repo. Pinned to the default branch;
# `cargo update -p revenant-net` pulls the latest after a revenant push.
revenant-net = { git = "https://github.com/themsquared/revenant.git", branch = "main" }

anyhow = "1"
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# In-process router tests (ServiceExt::oneshot) + temp ledger files. These were
# referenced by the test module but never declared, so `cargo test` was red.
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
